n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 0
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        volumeMounts:
        - name: n8n-storage
          mountPath: /home/node/.n8n
      volumes:
      - name: n8n-storage
        persistentVolumeClaim:
          claimName: n8n-pvc-new
