n8n-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  clusterIP: None
